--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,8 @@ eframe = { version = "0.22.0", default-features = false, features = [
     "persistence",   # Enable restoring app state when restarting the app.
 ] }
 log = "0.4"
+image = { version = "0.24", default-features = false, features = ["png"] }
+egui_extras = { version="0.22.0", features = ["image"] }
 
 # You only need serde if you want app persistence:
 serde = { version = "1", features = ["derive"] }
