--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,14 @@
 [package]
 name = "barnsley_gui"
-version = "0.1.0"
+version = "0.2.1"
 authors = ["Marcus Hughes <hughes.jmb@gmail.com>"]
 edition = "2021"
-rust-version = "1.65"
+rust-version = "1.73"
 
 
 [dependencies]
-egui = "0.22.0"
-eframe = { version = "0.22.0", default-features = false, features = [
+egui = "0.23.0"
+eframe = { version = "0.23.0", default-features = false, features = [
     "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
     "default_fonts", # Embed the default egui fonts.
     "glow",          # Use the glow rendering backend. Alternative: "wgpu".
@@ -16,12 +16,12 @@ eframe = { version = "0.22.0", default-features = false, features = [
 ] }
 log = "0.4"
 image = { version = "0.24", default-features = false, features = ["png"] }
-egui_extras = { version="0.22.0", features = ["image"] }
+egui_extras = { version="0.23.0", features = ["image"] }
 ndarray = "0.15.6"
 
 # You only need serde if you want app persistence:
 serde = { version = "1", features = ["derive"] }
-barnsley = { version = "0.2.0", path = "../barnsley" }
+barnsley = "0.2.1"
 strum = "0.25.0"
 
 # native:
