--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,7 +31,7 @@ env_logger = "0.10"
 # web:
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 wasm-bindgen-futures = "0.4"
-
+getrandom = { version = "0.2", features = ["js"] }
 
 [profile.release]
 opt-level = 2 # fast and small wasm
