--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "barnsley_gui"
-version = "0.3.0"
+version = "0.3.1"
 authors = ["Marcus Hughes <hughes.jmb@gmail.com>"]
 edition = "2021"
 rust-version = "1.73"
@@ -24,6 +24,7 @@ serde = { version = "1", features = ["derive"] }
 barnsley = "0.2.2"
 strum = "0.25.0"
 rfd = "0.12.1"
+async-std = "1.12.0"
 
 # native:
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
