--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ barnsley = "0.2.2"
 strum = "0.25.0"
 rfd = "0.12.1"
 async-std = "1.12.0"
+serde_json = "1.0.111"
 
 # native:
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
