--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Download and install Trunk binary
         run: wget -qO- https://github.com/thedodd/trunk/releases/latest/download/trunk-x86_64-unknown-linux-gnu.tar.gz | tar -xzf-
       - name: Build # build
-        run: ./trunk build --release https://jmbhughes.com/barnsley_gui/
+        run: ./trunk build --release --public-url https://jmbhughes.com/barnsley_gui/
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@v4
         with:
